--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -184,6 +184,6 @@
     <string name="outdated_core">LSPosed app is newer than framework. Please update LSPosed framework.</string>
     <string name="outdated_manager">LSPosed framework is newer than app. Please update the app from /data/adb/lspd/manager.apk manually.</string>
     <string name="manager_crashed">Manager crashed</string>
-    <string name="cpoy_crash_info">Copy crash info</string>
+    <string name="copy_crash_info">Copy crash info</string>
     <string name="copy_toast_msg">Copied</string>
 </resources>
