--- a/app/src/main/res/values-tr-rTR/strings.xml
+++ b/app/src/main/res/values-tr-rTR/strings.xml
@@ -183,6 +183,6 @@
     <string name="outdated_core">LSPosed uygulaması çerçeveden daha yenidir. Lütfen LSPosed çerçevesini güncelleyin.</string>
     <string name="outdated_manager">LSPosed çerçevesi, uygulamadan daha yenidir. Lütfen uygulamayı /data/adb/lspd/manager.apk adresinden manuel olarak güncelleyin.</string>
     <string name="manager_crashed">Yönetici çöktü</string>
-    <string name="cpoy_crash_info">Çökme bilgilerini kopyala</string>
+    <string name="copy_crash_info">Çökme bilgilerini kopyala</string>
     <string name="copy_toast_msg">kopyalandı</string>
 </resources>
