--- a/app/src/main/res/values-zh-rTW/strings.xml
+++ b/app/src/main/res/values-zh-rTW/strings.xml
@@ -179,6 +179,6 @@
     <string name="outdated_core">LSPosed 應用程式的版本高於框架。請更新 LSPosed 框架。</string>
     <string name="outdated_manager">LSPosed 框架的版本高於應用程式。請從 /data/adb/lspd/manager.apk 更新 LSPosed 應用程式。</string>
     <string name="manager_crashed">應用程式出現未知錯誤</string>
-    <string name="cpoy_crash_info">複製錯誤訊息</string>
+    <string name="copy_crash_info">複製錯誤訊息</string>
     <string name="copy_toast_msg">已複製</string>
 </resources>
